--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon server.js",
     "start": "node server.js"
   },
   "author": "saloni singh",
